--- a/YuGuan/res/layout/friend_list.xml
+++ b/YuGuan/res/layout/friend_list.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="138dp"
+    android:layout_height="120dp"
     android:background="@drawable/linearlayout_line"
     android:orientation="horizontal" >
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,8 +13,8 @@
 
         <ImageView
             android:id="@+id/friendPic"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:scaleType="fitXY"
             android:src="@drawable/head1_128" />
@@ -29,15 +28,20 @@
         android:paddingLeft="10dp" >
 
         <TextView
+            android:id="@+id/friendId"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/friendTitle"
+            style="@style/fontstyle_22"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:singleLine="true"
-            android:text="AAAAAAAAA"
-            android:textColor="#000"
-            android:textSize="25sp" />
+            android:text="AAAAAAAAA" />
         <!--  -->
 
         <LinearLayout
@@ -65,16 +69,17 @@
                 android:id="@+id/friendSex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:src="@drawable/girl_48" />
 
             <TextView
                 android:id="@+id/friendAddress"
+                style="@style/fontstyle_pingfen_18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:singleLine="true"
-                android:text="bbbbbbbbbbbbbb"
-                android:textColor="#FEC861"
-                android:textSize="20sp" />
+                android:text="bbbbbbbbbbbbbb" />
         </LinearLayout>
     </RelativeLayout>
 
