--- a/YuGuan/res/layout/accountinfo.xml
+++ b/YuGuan/res/layout/accountinfo.xml
@@ -14,31 +14,32 @@
         android:gravity="center_vertical" >
 
         <Button
+            android:id="@+id/account_back"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@drawable/title_btn_back"
-            android:onClick="doBack"
             android:text="返回"
+            android:onClick="doaccountBack"
             android:textColor="#fff"
             android:textSize="14sp" />
 
-        <ImageView
+        <TextView
+            style="@style/fontstyle_white_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clickable="false"
-            android:scaleType="matrix"
-            android:src="@drawable/crown" />
+            android:text="个人中心" />
 
-        <ImageView
-            android:layout_width="67dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:onClick="doLogin"
-            android:src="@drawable/add_user" />
+<!--         <ImageView -->
+<!--             android:id="@+id/account_login" -->
+<!--             android:layout_width="67dp" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:layout_alignParentRight="true" -->
+<!--             android:layout_centerVertical="true" -->
+<!--             android:layout_marginRight="5dp" -->
+<!--             android:src="@drawable/add_user" /> -->
     </RelativeLayout>
 
     <ScrollView
@@ -71,14 +72,11 @@
                 android:background="@drawable/white_line" >
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="10dp" >
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/friend_bg"
                 android:gravity="center"
@@ -101,13 +99,13 @@
                     android:orientation="horizontal" >
 
                     <ImageView
-                        android:id="@+id/accountSex2"
+                        android:id="@+id/accountSex"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/girl_48" />
 
                     <TextView
-                        android:id="@+id/accountAddress2"
+                        android:id="@+id/accountAddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
@@ -123,23 +121,22 @@
                 android:background="@drawable/white_line" >
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="30dp" >
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="2dp"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/white_line" >
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/msgcenter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:onClick="doMsgcenter"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp" >
 
@@ -159,12 +156,14 @@
                     android:text="消息中心"
                     android:textColor="#000"
                     android:textSize="20sp" />
-                
+
                 <ImageView
+                    android:id="@+id/msgNew"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
+                    android:visibility="gone"
                     android:src="@drawable/new_48" />
             </LinearLayout>
 
@@ -175,11 +174,13 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/mysport"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:onClick="doMysports"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp" >
 
@@ -206,13 +207,15 @@
                 android:layout_height="2dp"
                 android:background="@drawable/white_line" >
             </LinearLayout>
-            
+
             <LinearLayout
+                android:id="@+id/myfriends"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:onClick="doMyfriends"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp" >
 
@@ -239,13 +242,15 @@
                 android:layout_height="2dp"
                 android:background="@drawable/white_line" >
             </LinearLayout>
-            
+
             <LinearLayout
+                android:id="@+id/myshoucang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:onClick="doMyshoucang"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp" >
 
