--- a/YuGuan/res/layout/chat_xiaohei.xml
+++ b/YuGuan/res/layout/chat_xiaohei.xml
@@ -62,7 +62,7 @@
         <EditText
             android:id="@+id/et_sendmessage"
             android:layout_width="fill_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
