--- a/YuGuan/res/layout/messageinfo.xml
+++ b/YuGuan/res/layout/messageinfo.xml
@@ -15,6 +15,7 @@
         android:gravity="center_vertical" >
 
         <Button
+            android:id="@+id/msgcenter_back"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -24,15 +25,16 @@
             android:textColor="#fff"
             android:textSize="14sp" />
 
-        <ImageView
+        <TextView
+            style="@style/fontstyle_white_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clickable="false"
-            android:scaleType="matrix"
-            android:src="@drawable/crown" />
+            android:text="消息中心" />
 
         <ImageView
+            android:id="@+id/msgcenter_login"
             android:layout_width="67dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -53,6 +55,7 @@
             android:layout_height="wrap_content" >
 
             <LinearLayout
+                android:id="@+id/sysMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -62,14 +65,14 @@
                 android:padding="10dp" >
 
                 <TextView
+                    android:id="@+id/sysMsgText"
+                    style="@style/fontstyle_red_20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="系统消息"
-                    android:textColor="#DC2F1F"
-                    android:textSize="20sp" />
+                    android:text="系统消息" />
             </LinearLayout>
 
             <LinearLayout
@@ -78,6 +81,7 @@
                 android:background="@drawable/linearlayout_line" />
 
             <LinearLayout
+                android:id="@+id/friendsMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -87,14 +91,14 @@
                 android:padding="10dp" >
 
                 <TextView
+                    android:id="@+id/friendsMsgText"
+                    style="@style/fontstyle_20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="好友私信"
-                    android:textColor="#000"
-                    android:textSize="20sp" />
+                    android:text="好友私信" />
             </LinearLayout>
         </TableRow>
     </TableLayout>
