--- a/YuGuan/res/layout/myfriends.xml
+++ b/YuGuan/res/layout/myfriends.xml
@@ -23,13 +23,13 @@
             android:textColor="#fff"
             android:textSize="14sp" />
 
-        <ImageView
+        <TextView
+            style="@style/fontstyle_white_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clickable="false"
-            android:scaleType="matrix"
-            android:src="@drawable/crown" />
+            android:text="我的好友" />
 
         <ImageView
             android:layout_width="67dp"
