--- a/YuGuan/res/layout/pingfen.xml
+++ b/YuGuan/res/layout/pingfen.xml
@@ -23,13 +23,13 @@
             android:textColor="#fff"
             android:textSize="14sp" />
 
-        <ImageView
+        <TextView
+            style="@style/fontstyle_white_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clickable="false"
-            android:scaleType="matrix"
-            android:src="@drawable/crown" />
+            android:text="活动评分" />
 
         <ImageView
             android:layout_width="67dp"
@@ -67,8 +67,8 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:layout_marginBottom="10dp"
+                android:layout_height="3dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/white_line" >
             </LinearLayout>
 
