--- a/YuGuan/res/layout/sportapplyinfo.xml
+++ b/YuGuan/res/layout/sportapplyinfo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#fff"
     android:orientation="vertical"
     android:padding="10dp" >
@@ -10,8 +10,8 @@
         style="@style/fontstyle_bold_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp"
         android:text="活动邀请" />
 
     <LinearLayout
@@ -77,9 +77,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal" >
 
         <LinearLayout
+             android:id="@+id/but_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00B6F0"
@@ -104,6 +106,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/but_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#DC2F1F"
