--- a/YuGuan/res/values/styles.xml
+++ b/YuGuan/res/values/styles.xml
@@ -177,8 +177,18 @@
         <item name="android:textColor">#000</item>
     </style>
     
+     <style name="fontstyle_black_20">
+        <item name="android:textSize">20.0sp</item>
+        <item name="android:textColor">#000</item>
+    </style>
+    
      <style name="fontstyle_pingfen_16">
         <item name="android:textSize">16.0sp</item>
+        <item name="android:textColor">#FFB200</item>
+    </style>
+    
+     <style name="fontstyle_pingfen_18">
+        <item name="android:textSize">18.0sp</item>
         <item name="android:textColor">#FFB200</item>
     </style>
     
