--- a/YuGuan/res/layout/friendmsg.xml
+++ b/YuGuan/res/layout/friendmsg.xml
@@ -33,6 +33,12 @@
             android:text="周杰伦" />
         
         <TextView
+            android:id="@+id/msgId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+        
+        <TextView
             android:id="@+id/friendmsgname"
             style="@style/fontstyle_red_20"
             android:layout_width="wrap_content"
