--- a/YuGuan/res/layout/shoucang_action_item.xml
+++ b/YuGuan/res/layout/shoucang_action_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/shoucangActionName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -34,6 +35,7 @@
             android:text="地点：" />
 
         <TextView
+            android:id="@+id/shoucangActionAddr"
             style="@style/fontstyle_black_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,6 +63,7 @@
             android:text="时间：" />
 
         <TextView
+            android:id="@+id/shoucangActionTime"
             style="@style/fontstyle_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,6 +82,7 @@
         android:paddingBottom="10dp" >
 
         <TextView
+            android:id="@+id/shoucangActionUserNum"
             style="@style/fontstyle_pingfen_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +93,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/doJoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
