--- a/YuGuan/res/layout/shoucang_mall_item.xml
+++ b/YuGuan/res/layout/shoucang_mall_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/shoucangMallName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -26,6 +27,7 @@
         android:paddingBottom="10dp" >
 
         <TextView
+            android:id="@+id/shoucangMallDesc"
             style="@style/fontstyle_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,6 +46,7 @@
         android:paddingBottom="10dp" >
 
         <TextView
+            android:id="@+id/shoucangMallAddr"
             style="@style/fontstyle_16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,6 +65,7 @@
         android:paddingBottom="10dp" >
 
         <cn.buaa.myweixin.ScoreInfo
+            android:id="@+id/shoucangMallScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="2dp"
